hphp/hack/test/typecheck/type_arity/class_const_tarity.php
<?hh

type Bar<T> = shape(
  'hello' => T,
);

final class Foo {
  const Bar BAZ = shape('hello' => 1);
}
